# ray-tracing

./: Cargo.toml
src/: canvas.rs  color.rs  lib.rs  prelude.rs
src/geometry/: mod.rs  ray.rs  sphere.rs
src/util/: float_ord.rs  mod.rs  transform.rs
