[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_tracing"
path = "src/lib.rs"

[[bin]]
name = "ray_tracing"
path = "src/bin/main.rs"

[dependencies]
nalgebra = { version = "0.29.0", features = ["macros"] }
num-traits = "0.2.14"
image = "0.23.14"
tap = "1.0.1"
conv = "0.3.3"
partial_application = "0.2.1"
itertools = "0.10.1"
arrayvec = "0.7.1"
approx = "0.5.0"
btreemultimap = "0.1.0"
decorum = { git = "https://github.com/changhe3/decorum.git", branch = "0.3.1" }
